welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:24: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.Program'
override def run(){
             ^